Whole-page scrollbars on mobile phone fix.
The layout worked correctly on desktop, on any width size, but would
shit the bad on any actual phone. Scrollbars would appear on both axis,
showing the hidden <SideMenu>s.

Turns out the '.side-menu' CSS class was wrongfully using position
'absolute' instead of 'fixed'.

--- a/src/scss/components/_side-menu.scss
+++ b/src/scss/components/_side-menu.scss
@@ -5,8 +5,8 @@
 {
     display: flex;
     flex-direction: column;
-    position: absolute;
     overflow-y: auto;
+    position: fixed;
     background-color: color-dark(bg-secondary);
     padding: 1.3rem 1rem 1.25rem 1rem;
     max-width: 27.5rem;
